little fix, spacing

--- a/src/scss/components/sections/_hero.scss
+++ b/src/scss/components/sections/_hero.scss
@@ -79,3 +79,7 @@
 		}
 	}
 }
+
+.chips {
+	position: relative;
+}
